[gd_scene load_steps=4 format=3 uid="uid://c1ti0rtlxkq4j"]

[ext_resource type="Script" path="res://Scenes/SpawnPipes.gd" id="1_6nt14"]
[ext_resource type="PackedScene" uid="uid://df5c5264hyg6y" path="res://Scenes/PipeSet.tscn" id="2_gpsgs"]
[ext_resource type="PackedScene" uid="uid://ooiph862dgbi" path="res://Scenes/Player.tscn" id="3_a8yng"]

[node name="Game" type="Node2D"]
script = ExtResource("1_6nt14")
PipeScene = ExtResource("2_gpsgs")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 450.0
offset_bottom = 733.0
color = Color(0.310972, 0.683097, 0.781321, 1)

[node name="Player" parent="." instance=ExtResource("3_a8yng")]
z_index = 1
position = Vector2(63, 262)

[node name="PipeSet" parent="." instance=ExtResource("2_gpsgs")]
position = Vector2(360, 371)

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(636, 373)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
offset_right = 444.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 80
text = "10"
horizontal_alignment = 1

[connection signal="area_entered" from="Player" to="Player" method="_on_area_entered"]
[connection signal="playerDied" from="Player" to="." method="_on_player_player_died"]
[connection signal="scored" from="Player" to="." method="_on_player_scored"]
